src/objects/Contact_Portal_User__c.object
<CustomObject>
    <fields>
        <fullName>ADUAUserDetails__c</fullName>
        <label>ADUAUserDetails</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Portal User (Contact)</relationshipLabel>
        <relationshipName>Portal_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Portal User</relationshipLabel>
        <relationshipName>Contact_Portal_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Docs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Docs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Download__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Download</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Portal_Id__c</fullName>
        <label>User Portal Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZenDesk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ZenDesk</label>
        <type>Checkbox</type>
    </fields>
    <label>Contact Portal User</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>ADUAUserDetails__c</columns>
        <columns>Contact__c</columns>
        <columns>CLookup__c</columns>
        <columns>Docs__c</columns>
        <columns>Download__c</columns>
        <columns>LMS__c</columns>
        <columns>User_Portal_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Docs_Users</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>ADUAUserDetails__c</columns>
        <columns>Contact__c</columns>
        <columns>CLookup__c</columns>
        <columns>Docs__c</columns>
        <columns>Download__c</columns>
        <columns>LMS__c</columns>
        <columns>User_Portal_Id__c</columns>
        <columns>ZenDesk__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Docs__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Docs Users</label>
    </listViews>
    <nameField>
        <label>Contact Portal User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Portal User</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>